tests/sksl/errors/PrivateTypes.glsl
### Compilation failed:

error: 2: type '$mat' is private
error: 5: type 'S' is private
error: 9: type '$ivec' is private
error: 10: type '$genType' is private
4 errors
